Custom state object implemented and works.

--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -3,7 +3,12 @@
 DefaultOffsetX = 100
 DefaultOffsetY = 75
 
+TimeBetweenPawnUpdates = 0.03f
+
+; Minimum and maximum scale of a body part, where 1.0 = 100% scale (normal size)
 MinSize = 0.75f
 MaxSize = 1.5f
+
+
 
 
