Added translation sliders.

--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -1,13 +1,16 @@
 [WOTCResizeArmor.UIPanel_ResizeArmor]
 
 DefaultOffsetX = 100
-DefaultOffsetY = 75
+DefaultOffsetY = 0
 
 TimeBetweenPawnUpdates = 0.03f
 
 ; Minimum and maximum scale of a body part, where 1.0 = 100% scale (normal size)
 MinSize = 0.75f
 MaxSize = 1.5f
+
+; Maximum distance a body part can be moved, in unreal units
+MaxTranslation = 100
 
 
 
