Spawn the list in 2D.

--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -1,6 +1,8 @@
 [WOTCResizeArmor.UIPanel_ResizeArmor]
 
-DefaultOffsetX = 100
+DefaultWidth = 500
+DefaultHeight = 170
+DefaultOffsetX = 1400
 DefaultOffsetY = 0
 
 TimeBetweenPawnUpdates = 0.03f
