Position sliders can go into negative now.

--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -1,9 +1,9 @@
 [WOTCResizeArmor.UIPanel_ResizeArmor]
 
-DefaultWidth = 500
-DefaultHeight = 170
-DefaultOffsetX = 1400
-DefaultOffsetY = 0
+defaultWidth = 500
+defaultHeight = 170
+defaultOffsetX = 1400
+defaultOffsetY = 0
 
 TimeBetweenPawnUpdates = 0.03f
 
@@ -12,7 +12,7 @@ MinSize = 0.75f
 MaxSize = 1.5f
 
 ; Maximum distance a body part can be moved, in unreal units
-MaxTranslation = 100
+MaxTranslation = 10.0f
 
 
 
