Prerelease checks and fixes.

--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -1,19 +1,20 @@
 [WOTCResizeArmor.UIPanel_ResizeArmor]
-
-defaultWidth = 500
-defaultHeight = 170
-defaultOffsetX = 1400
-defaultOffsetY = 0
-
-TimeBetweenPawnUpdates = 0.03f
-
 ; Minimum and maximum scale of a body part, where 1.0 = 100% scale (normal size)
 MinSize = 0.75f
 MaxSize = 1.5f
 
-; Maximum distance a body part can be moved, in unreal units
+; Maximum distance a body part can be moved, presumably in unreal units
 MaxTranslation = 10.0f
 
+; Various UI settings.
+defaultWidth = 500
+defaultHeight = 170
+defaultOffsetX = 1400
+defaultOffsetY = 0
+TimeBetweenPawnUpdates = 0.03f
 
+[WOTCResizeArmor.Help]
+; Set "true" to enable debug logging into Launch.log
+bLog = false
 
 
