--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -15,6 +15,6 @@ TimeBetweenPawnUpdates = 0.03f
 
 [WOTCResizeArmor.Help]
 ; Set "true" to enable debug logging into Launch.log
-bLog = true
+bLog = false
 
 
