The panel to customize the soldier size will now show in the main customization menu as well.

--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -13,6 +13,10 @@ defaultOffsetX = 1400
 defaultOffsetY = 0
 TimeBetweenPawnUpdates = 0.03f
 
+[WOTCResizeArmor.UISL_ResizeArmor]
+; If true, the panel to resize the entire soldier will be available in the main menu of the customization screen.
+bAddResizeBodyPanelToCustomizeMainMenu = true
+
 [WOTCResizeArmor.Help]
 ; Set "true" to enable debug logging into Launch.log
 bLog = true
