--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -19,6 +19,6 @@ bAddResizeBodyPanelToCustomizeMainMenu = true
 
 [WOTCResizeArmor.Help]
 ; Set "true" to enable debug logging into Launch.log
-bLog = true
+bLog = false
 
 
