--- a/WOTCResizeArmor/Config/XComUI.ini
+++ b/WOTCResizeArmor/Config/XComUI.ini
@@ -19,6 +19,8 @@ bAddResizeBodyPanelToCustomizeMainMenu = true
 
 [WOTCResizeArmor.Help]
 ; Set "true" to enable debug logging into Launch.log
-bLog = false
+
+; TODO: Debug only
+bLog = true
 
 
